style: Fix some low-severity Sonar issues in tests (#1115)